# PumpkinTrainer

./: .gitignore  README.md  config.yaml  config_template.yaml  pyproject.toml  train.py
Customtrainer/: trainer.py
Customtrainer/hook/: deepspeed_hook.py  lr_scheduler_hook.py  optimizer_hook.py
Customtrainer/optimizer/: __init__.py  build_optimizer.py
Customtrainer/utils/: __init__.py  config_parser.py  distribute.py
config/: config.yaml  metalora.yaml  moe350M.yaml
src/data/: __init__.py  build_data.py  data_utils.py
src/model/: activations.py  attention.py  build_model.py  layernorm.py  model_config.py  rotary.py  trainer_model.py  transformer.py  utils.py
src/model/hf_model/: custom_llama.py
src/model/layers/: __init__.py  custom_attn.py  custom_ffn.py  layers_utils.py  ops.py
src/trainer/: EpochBasedTrainer.py  IterBasedTrainer.py  trainer.py
src/trainer/hook/: __init__.py  checkpoint_hook.py  deepspeed_hook.py  eval_hook.py  hookbase.py  logger_hook.py
src/trainer/utils/: __init__.py  config_parser.py  error_message.py  logger.py  misc.py  sampler.py
