[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Customtrainer"
version = "0.1.0"
description = "A custom trainer for PyTorch with minimal interface and extenable components."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "wandb",
    "torch",
    "black",
    "isort",
    "numpy",
    "deepspeed",
    "termcolor",
    "tabulate",
    "pillow",
    "omegaconf",
    "torchvision",
    "timm",
    "safetensors",
    "tensorboard",
	"transformers==4.46.0",
	"einops",
	"datasets"
]

[project.urls]

[tool.setuptools.packages.find]
exclude = ["config*", "Script*", "assets*", "examples.*", ]

[tool.wheel]
exclude = ["config*", "Script*", "assets*", "examples.*", ]

license = { file = "LICENSE" }

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | inference/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3